test/fixtures/errors/throw_in_eval_named.snapshot
evalscript.js:3
  throw new Error('error in named script');
  ^

Error: error in named script
    at eval (evalscript.js:3:9)

Node.js <node-version>
